src/css/player.css
/* ... */
.op-ads--active .op-controls .op-controls__progress--seek {
    pointer-events: none;
}
.op-ads--active .op-controls .op-controls__progress--played {
    color: #fecb2f;
}
.op-ads--active .op-controls .op-controls__progress--buffer {
    color: transparent;
}
.op-ads--active .op-controls .op-controls__progress--seek::-webkit-slider-thumb {
    display: none;
}
.op-ads--active .op-controls .op-controls__progress--seek::-moz-range-thumb {
    display: none;
}
.op-ads--active .op-controls .op-controls__progress--seek::-ms-thumb {
    display: none;
}
.op-ads--active .op-controls .op-controls__progress--seek::-webkit-slider-runnable-track {
    cursor: default;
}
.op-ads--active .op-controls .op-controls__progress--seek::-moz-range-track {
    cursor: default;
}
.op-ads--active .op-controls .op-controls__progress--seek::-ms-track {
    cursor: default;
}
.op-ads--active .op-controls .op-control__hide-in-ad {
    cursor: default;
    display: none;
    pointer-events: none;
}

/* === Status ================== */
.op-status {
    color: #fff;
    font-weight: 400;
    left: 0;
    padding: 20px 0;
    position: absolute;
    text-align: center;
    top: 30px;
    transform: translateY(-40px);
    transition: all 0.3s ease;
    width: 100%;
    z-index: 4;
}
.op-status > span {
    background: rgba(0, 0, 0, 0.7);
    box-decoration-break: clone;
    line-height: 150%;
    padding: 3px 10px;
}

.op-player__audio .op-status {
    top: 23px;
}

/* === Tooltip ================== */
.op-controls__tooltip {
    background: #eee;
    border: 1px solid #000;
    bottom: 100%;
    color: #000;
    display: none;
    left: 0;
    margin-bottom: 10px;
    padding: 1px 4px;
    position: absolute;
    text-align: center;
    transform: translateX(0%);
}
.op-player__video .op-controls__tooltip {
    margin-bottom: 10px;
}
.op-controls__tooltip:before,
.op-controls__tooltip:after {
    content: '';
    height: 0;
    left: 0;
    margin: 0 auto;
    position: absolute;
    right: 0;
    top: 100%;
    width: 0;
}
.op-controls__tooltip:before {
    border-left: solid 8px transparent;
    border-right: solid 8px transparent;
    border-top: solid 8px #000;
}
.op-controls__tooltip:after {
    border-left: solid 7px transparent;
    border-right: solid 7px transparent;
    border-top: solid 7px #eee;
}
.op-controls__tooltip--visible {
    display: block;
}

/* === Volume =================== */
.op-controls__volume {
    margin-left: 0;
    width: 70px;
}
.op-controls .op-controls__mute:before {
    text-align: left;
}
.op-player__video .op-controls__volume {
    margin-top: 10px;
}
.op-player__unmute {
    background: rgba(0, 0, 0, 0.7);
    color: #fff;
    cursor: pointer;
    left: 0;
    padding: 5px;
    position: absolute;
    top: 0;
    z-index: 3;
}

/* == Fullscreen ============= */
.op-player[data-fullscreen='true'] .op-controls {
    z-index: 2147483648;
}
.op-player[data-fullscreen='true'].op-controls--hidden {
    cursor: none;
}
.op-player[data-fullscreen='true'].op-controls--hidden .op-controls {
    bottom: -40px;
}
.op-player video::-webkit-media-controls,
.op-player video::-webkit-media-text-track-container {
    display: none !important;
}

/* == Captions =============== */
.op-captions {
    bottom: 0;
    color: #fff;
    display: none;
    font-weight: 400;
    left: 0;
    padding: 20px 0;
    position: absolute;
    text-align: center;
    transform: translateY(-40px);
    transition: transform 0.3s ease;
    width: 100%;
    z-index: 1;
}
.op-controls--hidden .op-captions {
    bottom: -32px;
}
.op-captions--on {
    display: block;
}
.op-captions > span {
    background: rgba(0, 0, 0, 0.7);
    box-decoration-break: clone;
    line-height: 150%;
    padding: 3px 10px;
}
.op-player__audio.op-captions--detected {
    background: transparent;
    min-height: 95px;
}
.op-player__audio.op-captions--detected .op-captions {
    bottom: -10px;
    padding: 0;
}
.op-player__audio.op-captions--detected .op-captions > span {
    background: transparent;
    color: #000;
}
.op-player__audio.op-captions--detected .op-controls {
    background: #000;
    bottom: auto;
}
.op-player__audio.op-captions--detected .op-settings {
    bottom: auto;
    top: 35px;
}
.op-controls .op-controls__captions--on:before {
    color: red;
}
.op-captions__menu {
    bottom: 36px;
    left: 50%;
    min-width: 73px;
    overflow: visible;
    transform: translate(-50%, 0);
    z-index: 10;
}
.op-captions__menu:after {
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-top: 10px solid rgba(28, 28, 28, 0.9);
    content: '';
    height: 0;
    left: 0;
    margin: 0 auto;
    position: absolute;
    right: 0;
    top: 100%;
    width: 0;
}

/* WebVTT cues */
::cue {
    color: #ccc;
}
video:-webkit-media-text-track-display {
    top: -15%;
}

/* === Levels ================ */
.op-levels__menu {
    bottom: 36px;
    left: 50%;
    min-width: 73px;
    overflow: visible;
    transform: translate(-50%, 0);
    z-index: 10;
}
.op-levels__menu:after {
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-top: 10px solid rgba(28, 28, 28, 0.9);
    content: '';
    height: 0;
    left: 0;
    margin: 0 auto;
    position: absolute;
    right: 0;
    top: 100%;
    width: 0;
}

/* === Ads =================== */
.op-ads {
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
}
.op-ads--active {
    overflow: hidden;
}
.op-ads--active .op-controls__captions,
.op-ads--active .op-captions,
.op-ads--active .op-controls__settings {
    display: none;
}
.op-ads--active .op-controls__fullscreen {
    float: right;
}
.op-ads--active .op-controls .op-control__right ~ .op-control__right {
    margin-left: auto;
}
.op-ads--active .op-ads {
    z-index: 1;
}
.op-player[data-fullscreen='true'].op-ads--active .op-ads {
    z-index: 2147483645;
}
/* ... */

